# Dyslexia_EEG_characterization

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/reports/: repw1.md  repw2.md  repw2_3.md  repw4.md
scripts/: exploreRQA.ipynb  explore_other_metrics.ipynb  rqe_analysis.py
scripts/rqe/: README.md  all_electrodes_rqa.ipynb  explore.ipynb  rqe_analysis.py  rqe_grid_explore.py
src/pyddeeg/: __init__.py
src/pyddeeg/classification/: README.md  __init__.py
src/pyddeeg/classification/dataloaders/: __init__.py  dataloader.py
src/pyddeeg/classification/engine/: __init__.py  trainer.py  validator.py
src/pyddeeg/classification/models/: EEGWindowModel.py  __init__.py  window_model.py
src/pyddeeg/classification/utils/: auc_evolution.py  basic_visualizations.py  strat_kfold.py  time_domain_parser.py
src/pyddeeg/mne_utils/: window_experiment_utils.py
src/pyddeeg/signal_processing/preprocessing/: __init__.py  pipeline.py  rqe_preproc_picasso.py  zerolag_preprocessing.py
src/pyddeeg/signal_processing/preprocessing/assets/: README.md  config_example.yaml
src/pyddeeg/signal_processing/rqa/: rqe.py
src/pyddeeg/signal_processing/rqa_toolbox/: README.md  __init__.py  rqa.py  rqe.py  rqe_parallelizable.py  utils.py
src/pyddeeg/statistics/: minmax_norm.py
src/pyddeeg/utils/: __init__.py
src/pyddeeg/utils/postprocessing/: reorganize_per_window_results.py  reorganize_rqa_results.py  reorganize_zerolag_results.py
src/pyddeeg/utils/synthetic_signal_generator/: __init__.py  synth_eeg.py  synth_signal.py
src/pyddeeg/utils/visualize/: README.md
(+20 files in other folders)
